# osuchan-backend

./: .dockerignore  .env.template  .gitignore  .gitmodules  Dockerfile  Makefile  Pipfile  README.md  compose.override.yaml  compose.prod.yaml  compose.tooling.yaml  compose.yaml  conftest.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.tooling.yml  docker-compose.yml  local_settings.template.py  manage.py  prometheus.yml  pyproject.toml  renovate.json  requirements.txt  template.env
.github/workflows/: test-on-push.yml  test.yml
common/: converters.py  discord_webhook_sender.py  enums.py  error_report.py  error_reporter.py  test_converters.py  test_discord_webhook_sender.py  test_error_reporter.py  test_utils.py  utils.py
common/osu/: apiv1.py  beatmap_provider.py  difficultycalculator.py  enums.py  osuapi.py  test_apiv1.py  test_beatmap_provider.py  test_difficultycalculator.py  test_osuapi.py  test_utils.py  utils.py
config/dev/: broker-redis.conf  difficalcy-osu.env  difficalcy.env  django.env  flower.env  grafana.env  postgres-exporter.env  postgres.env  rabbitmq.env
config/template/: django.env
config/test/: django.env
docs/: worker.md
leaderboards/: admin.py  apps.py  enums.py  models.py  serialisers.py  services.py  tasks.py  test_models.py  test_services.py  test_views.py  urls.py  utils.py  views.py
leaderboards/migrations/: 0001_initial.py  0002_auto_20190708_0504.py  0003_auto_20190712_1401.py  0004_leaderboard_icon_url.py  0005_auto_20190718_0841.py  0006_auto_20190721_1932.py  0007_auto_20200328_1236.py  0008_auto_20200328_1236.py  0009_auto_20200328_1242.py  0010_auto_20200331_0056.py  0011_leaderboard_score_set.py  0012_auto_20200617_1918.py  0013_auto_20200620_1935.py  0014_leaderboard_archived.py  0015_auto_20210614_0706.py  0016_leaderboard_notification_discord_webhook_url.py  0017_alter_leaderboard_member_count.py  0018_membershipscore_alter_membership_scores.py  0019_alter_membershipscore_id.py  0020_membershipscore_performance_total_and_more.py  0021_membership_unique_memberships.py  0022_fix_missing_fk_constraint.py  0023_leaderboard_scores_membershipscore_leaderboard_and_more.py  0024_leaderboard_calculator_engine.py  0025_leaderboard_primary_performance_value.py  0026_alter_leaderboard_calculator_engine_and_more.py  0027_leaderboard_custom_colours.py  0028_leaderboard_is_event.py  0029_leaderboard_notification_settings.py  0030_alter_leaderboard_notification_settings.py
main/: views.py
main/templates/: beta.html  maintenance.html
middleware/: logging.py  test_logging.py
osuauth/: admin.py  apps.py  backends.py  middleware.py  models.py  permissions.py  serialisers.py  test_middleware.py  test_models.py  test_views.py  urls.py  views.py
osuauth/migrations/: 0001_initial.py  0002_user_is_beta_tester.py  0003_auto_20190718_0841.py  0004_scorefilterpreset.py  0005_delete_scorefilterpreset.py  0006_auto_20210614_0706.py  0007_user_last_active.py
osuchan/: celery.py  settings.py  test_celery.py  test_celery_integration.py  urls.py  wsgi.py
ppraces/: admin.py  apps.py  enums.py  models.py  serialisers.py  services.py  tasks.py  urls.py  views.py
profiles/: admin.py  enums.py  managers.py  models.py  serialisers.py  services.py  tasks.py  test_models.py  test_services.py  test_views.py  urls.py  views.py
scripts/: README.md  backupdb  checkfixup  checkformatting  fixformatting  formatcode  manage  migrate  psql  restoredb  shell
users/: admin.py  models.py  serialisers.py  test_models.py  test_views.py  urls.py  views.py
(+83 files in other folders)
