[tool.poetry]
name = "osuchan-backend"
version = "0.1.0"
description = ""
authors = ["Samuel Cattini-Schultz <syriiins@gmail.com>"]
license = "AGPL-3.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.2.7"
Django = "^4.2.3"
djangorestframework = "^3.12.4"
django-debug-toolbar = "^4.1.0"
gunicorn = "^22.0.0"
httpx = "^0.27.0"
oppaipy = "^1.0.4"
psycopg2-binary = "^2.9.1"
pymemcache = "^4.0.0"
requests = "^2.32.0"
rosu-pp-py = "^1.0.0"
tqdm = "^4.64.0"
flower = "^2.0.0"
pydantic-settings = "^2.0.0"
django-prometheus = "^2.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.9.3"
coverage = "^7.5.1"
pytest = "^8.2.0"
pytest-django = "^4.5.2"
freezegun = "^1.2.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "osuchan.settings"
norecursedirs = ["data", "beatmaps"]

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
