[project]
name = "osuchan-backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Samuel Cattini-Schultz", email = "syriiin@proton.me" }]
dependencies = [
    "celery>=5.2.7,<6.0.0",
    "Django>=6.0.0,<7.0.0",
    "djangorestframework>=3.12.4,<4.0.0",
    "django-debug-toolbar>=6.0.0,<7.0.0",
    "gunicorn>=26.0.0,<26.1.0",
    "httpx>=0.28.0,<1.0.0",
    "psycopg2-binary>=2.9.1,<3.0.0",
    "requests>=2.25.1,<3.0.0",
    "tqdm>=4.64.0,<5.0.0",
    "flower>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "django-prometheus>=2.3.1,<3.0.0",
    "django-redis>=6.0.0,<7.0.0",
    "ossapi>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
redis = ["celery>=5.6.3"]

[dependency-groups]
dev = [
    "black>=26.0.0,<27.0.0",
    "isort>=8.0.0,<9.0.0",
    "coverage>=7.5.1,<8.0.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-django>=4.5.2,<5.0.0",
    "freezegun>=1.2.2,<2.0.0",
    "watchdog[watchmedo]>=6.0.0,<7.0.0",
    "syrupy>=5.0.0,<6.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "osuchan.settings"
norecursedirs = ["data", "beatmaps"]
markers = ["integration: marks a test as an integration test."]

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
